--- a/css/main.css
+++ b/css/main.css
@@ -389,3 +389,18 @@ background-color: #2c3e50;
 }
 
 /*------------------- /NAVBAR ---------------------------*/
+
+/*------------------- FOOTER ---------------------------*/
+footer {
+    background-color: #2c3e50;
+    text-align: center;
+}
+/*------------------- /FOOTER ---------------------------*/
+
+/*------------------- FOOTER ---------------------------*/
+.fa-4x {
+    color: #3498db;
+    height: 250px;
+    width: 250px;
+}
+/*------------------- FOOTER ---------------------------*/
