add carousel boot slider

--- a/css/main.css
+++ b/css/main.css
@@ -95,8 +95,7 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
-
+/* carousel */
 
 
 
