add social icons inline:block

--- a/css/main.css
+++ b/css/main.css
@@ -401,6 +401,7 @@ footer {
 .fa-4x {
     color: #3498db;
     height: 250px;
-    width: 250px;
+    width: 150px;
+     i
 }
 /*------------------- FOOTER ---------------------------*/
