--- a/css/main.css
+++ b/css/main.css
@@ -384,8 +384,13 @@ background-color: #2c3e50;
 }
 
 /*------------------- /NAVBAR ---------------------------*/
-<<<<<<< HEAD
-=======
+
+
+/*------------------- CAROUSEL ---------------------------*/
+.boot_slider{
+    margin-top: -120px;
+}
+/*------------------- /CAROUSEL ---------------------------*/
 
 /*------------------- FOOTER ---------------------------*/
 footer {
@@ -402,4 +407,3 @@ footer {
      i
 }
 /*------------------- FOOTER ---------------------------*/
->>>>>>> d35d458e0542d94ec73623f4476d8ff4ac914c34
