--- a/css/main.css
+++ b/css/main.css
@@ -384,22 +384,27 @@ background-color: #2c3e50;
 }
 
 /*------------------- /NAVBAR ---------------------------*/
-<<<<<<< HEAD
-=======
+
 
 /*------------------- FOOTER ---------------------------*/
 footer {
+    padding-top: 25px;
+    padding-bottom: 10px;
     background-color: #2c3e50;
     text-align: center;
+    margin-bottom: -10px;
+}
+
+footer p{
+  color: white;
 }
 /*------------------- /FOOTER ---------------------------*/
 
 /*------------------- FOOTER ---------------------------*/
 .fa-4x {
     color: #3498db;
-    height: 250px;
+    height: 150px;
     width: 150px;
      i
 }
 /*------------------- FOOTER ---------------------------*/
->>>>>>> d35d458e0542d94ec73623f4476d8ff4ac914c34
