--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,10 @@
    Base styles: opinionated defaults
    ========================================================================== */
 
+* {
+    font-family: "Raleway";
+}
+
 html {
     color: #222;
     font-size: 1em;
