create Index & Home section comment in mains.css

--- a/css/main.css
+++ b/css/main.css
@@ -331,7 +331,13 @@ textarea {
 .container-fluid {
     background-color: #2c3e50;
 }
+/*------------------- /NAVBAR ---------------------------*/
 
+/*=================== INDEX =============================*/
+
+/*=================== /INDEX =============================*/
+
+/*=================== HOME ==============================*/
 /*------------------- CAROUSEL ---------------------------*/
 
 .boot_slider {
@@ -360,3 +366,4 @@ footer p {
 }
 
 /*------------------- /FOOTER ---------------------------*/
+/*=================== /HOME ==============================*/
