--- a/css/main.css
+++ b/css/main.css
@@ -362,7 +362,7 @@ padding-right: 2%;
   border-radius: 30px;
 }
 
-a :hover{
+.chooselang a :hover{
   border-radius: 30px;
   border: 2px solid gray;
   height: 300px;
