--- a/css/main.css
+++ b/css/main.css
@@ -246,6 +246,7 @@ textarea {
     background-color: #2c3e50;
     border-color: #2c3e50;
     border-radius: 0px;
+    z-index: 9999;
 }
 .navbar-default .navbar-brand {
     background-color: #2c3e50;
