ajout de la liste des pays sur le country fr

--- a/css/main.css
+++ b/css/main.css
@@ -369,6 +369,10 @@ padding-right: 2%;
   width: 500px;
 }
 
+.countryfr img{
+  padding: 10px;
+}
+
 /*=================== /INDEX =============================*/
 
 /*=================== HOME ==============================*/
