--- a/css/main.css
+++ b/css/main.css
@@ -384,6 +384,7 @@ textarea {
 .countryfr {
     background-color: #f1f1f1;
     border: 1px solid lightgray;
+    padding-bottom: 20px;
 }
 
 .countryfr img {
