--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,11 @@ html {
     line-height: 1.4;
 }
 
+.row{
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
@@ -245,7 +250,6 @@ textarea {
     background-color: #2c3e50;
     border-color: #2c3e50;
     border-radius: 0px;
-    z-index: 9999;
 }
 .navbar-default .navbar-brand {
     background-color: #2c3e50;
