--- a/css/main.css
+++ b/css/main.css
@@ -250,6 +250,7 @@ textarea {
     background-color: #2c3e50;
     border-color: #2c3e50;
     border-radius: 0px;
+    z-index: 9999;
 }
 .navbar-default .navbar-brand {
     background-color: #2c3e50;
@@ -430,7 +431,6 @@ footer p {
     color: #3498db;
     height: 100px;
     width: 150px;
-    i
 }
 
 /*------------------- /FOOTER ---------------------------*/
