finishing team section with photos

--- a/css/main.css
+++ b/css/main.css
@@ -415,6 +415,15 @@ textarea {
 
 /*------------------- /CAROUSEL ---------------------------*/
 
+/*------------------- TEAM ---------------------------*/
+.portrait {
+    border-radius: 100%;
+    width: 150px;
+    height: 150;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+/*------------------- /TEAM ---------------------------*/
 
 /*------------------- FOOTER ---------------------------*/
 
