add beautiful pictures for carousel

--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,11 @@ html {
     line-height: 1.4;
 }
 
+.row {
+    margin-right: 0px;
+    margin-left: 0px;
+}
+
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
