create social section in contactfr.html

--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,10 @@ html {
     margin-left: 0px;
 }
 
+.jumbotron {
+    padding-bottom: 50px;
+}
+
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
