fix target blank in homefr.html contactfr.html

--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,11 @@ html {
 }
 
 .jumbotron {
-    padding-bottom: 50px;
+    padding-bottom: 30px;
+}
+
+.container {
+    padding-bottom: 30px;
 }
 
 /*
