--- a/css/main.css
+++ b/css/main.css
@@ -454,3 +454,16 @@ footer p {
 
 
 /*=================== /HOME ==============================*/
+
+
+/*=================== /portrait ==============================*/
+
+.portrait{
+  
+}
+
+.portrait h1{
+  text-align: center;
+}
+
+/*=================== /portrait ==============================*/
