add Taita on portrait en

--- a/css/main.css
+++ b/css/main.css
@@ -476,4 +476,9 @@ footer p {
   font-weight: bold;
 }
 
+.portrait a :hover{
+  height: 260px;
+  width: 260px;
+}
+
 /*=================== /portrait ==============================*/
